[metadata]
name = orquestra-python-dev
description = "Orquestra Python Development tools"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-python-dev
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
python_requires = >=3.9,!=3.9.7

install_requires =
    black~=22.3
    flake8~=3.9.0
    Flake8-pyproject>=0.9.0
    isort~=5.9.0
    mypy~=0.910
    pytest~=6.2
    pytest-cov>=2.12
